src/index.css
:root {
    --antique-bronze: #5b5022ff;
    --russian-green: #749d78ff;
    --olive-drab-3: #839728ff;
    --hunter-green: #3f6651ff;
    --laurel-green: #afb494ff;
    --spanish-grey-wood: url("./assets/lukas-blazek-unsplash.jpg");
    --rich-wood: url("./assets/lazarescu-alexandra-unsplash.jpg");
    --better-grey-wood: url("./assets/andrey-haimin-unsplash.jpg");
}

body {
    margin: auto;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
        "Helvetica Neue", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-image: url("./assets/mitchell-luo-unsplash.jpg");
    background-size: cover;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
        monospace;
}

#header {
    margin: auto;
}

#hero {
    text-align: center;
    padding: 20px;
    background-image: var(--rich-wood);
    background-size: cover;
    border-radius: 15px;
    border: 5px solid saddlebrown;
}

#hero > * {
    margin: 10px 0;
}
#my-name {
    font-size: 50px;
}
#subtitle {
    font-size: xx-large;
}

#navBtn,
#navActive {
    width: 200px;
    margin: auto;
    margin-top: 30px;
    font-size: larger;
    background-image: var(--rich-wood);
    background-size: cover;
    border: 4px solid saddlebrown;
}

#navActive {
    text-decoration: underline;
    text-decoration-thickness: 5px;
}

#eyecon {
    font-size: xxx-large;
}

#react-card {
    background-color: #39483e;
    color: ivory;
    margin: 40px auto;
    width: 400px;
    padding: 20px;
    border-radius: 15px;
    text-align: center;
}

#proj-link {
    text-decoration: none;
    color: #a29a97;
    font-size: x-large;
}

#port-tech-stack {
    text-decoration: underline;
}

#resume {
    text-decoration: none;
    color: ivory;
    border: 3px solid slategrey;
    border-radius: 4px;
    padding: 10px;
    background-image: var(--rich-wood);
    background-size: cover;
    font-weight: 700;
}

#tech-prof {
    text-decoration: underline;
    margin-bottom: 0;
}

#tech-prof-ul {
    list-style: none;
}

#skill {
    font-size: large;
    padding: 3px;
    text-align: left;
}

#contact-info {
    background-color: #a29a97;
    height: fit-content;
    margin: 100px auto 0 auto;
}

#contact-title {
    font-size: xxx-large;
    color: #39483e;
    margin: 10px;
}

#contact-info > * {
    font-size: x-large;
    color: #39483e;
    text-align: center;
}

.contact-anchor {
    text-decoration: underline;
    color: #39483e;
}

